tests/sema/positive/function_call.nv
fn add(a: int, b: int) : int {
    return a + b;
}

fn main() : void {
    let x : int = add(1, 2);
    print_int(x);
    return;
}
