tests/sema/negative/function_argument_type_mismatch.nv
fn id(x: int) : int {
    return x;
}

fn main() : void {
    let x : int = id(true);
    return;
}
